name:                example-scotty-app
version:             0.1.0.0
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable example-scotty-app
  main-is:             Main.hs
  build-depends:       base >=4.9 && <5
                     , scotty
  default-language:    Haskell2010
  ld-options: -static
